button not showing on the tablet view fixed

--- a/css/style.css
+++ b/css/style.css
@@ -129,8 +129,6 @@ video{
         z-index: 10;
         margin-top: 80px;
         background-image: url(../img/images/image-framed.png);
-        background-color: rgb(240, 240, 240);
-        background-blend-mode: multiply;
 	background-size: cover;
         background-position: bottom;
 }
@@ -185,7 +183,7 @@ video{
                 height: auto !important;	
         }
         .hero{
-                margin-top: -80px;
+                margin-top: 80px;
         }
         .hero h2{
                 font-size: 28px;
